Fixed room price margin on smaller screens

--- a/components/checkout-module/client/styles/input.scss
+++ b/components/checkout-module/client/styles/input.scss
@@ -42,6 +42,9 @@ $small-font: 13px;
         height: 75px;
         background-color: white;
         z-index: 6;
+        .header {
+            margin: auto;
+        }
     }
 }
 
@@ -265,7 +268,7 @@ $small-font: 13px;
 }
 
 @media screen and (max-width: 576px) {
-    .sub-but {
+    .footer .sub-but {
         max-width: 40% !important;
         margin: auto auto auto 10px !important;
     }
@@ -273,6 +276,19 @@ $small-font: 13px;
         .header {
             margin: auto 10px auto auto;
         }
+    }
+    .checkout-modal {
+        position: fixed;
+        top: 40%;
+        left: 41%;
+        right: auto;
+        bottom: auto;
+        transform: translate(-40%, -41%);
+        background-color: white;
+        padding: 18px;
+        height: auto;
+        border: 1px solid rgb(206, 206, 206);
+        outline: none;
     }
 }
 
